--- a/src/app/expense/expense.component.scss
+++ b/src/app/expense/expense.component.scss
@@ -2,18 +2,22 @@ button{
     border-radius: 50%;
 }
 
-.add-button{
-    position: fixed;
-    top: 100%;
-    left: 100%;
-    transform: translate(-80px,-80px);
+.mat-form-field{
+    max-width: 160px;
+    margin-right: 5px;
+    margin-left: 5px;
 }
 
-.input-style{
-    height: fit-content;
-    padding: 4px;    
+.mat-optgroup .mat-option {
+    padding-left: 10px;
 }
 
-.button-delete{
-    margin-top: 4px;
+
+.mat-group {
+    height: 25px!important;
+    padding: 0 16px!important;
+}
+
+.odd{
+    background-color:darkgray;
 }
