--- a/src/app/expense/expense.component.html
+++ b/src/app/expense/expense.component.html
@@ -1,23 +1,27 @@
-<form [formGroup]="expenseForm">
 
-  <div class="container">
+<form [formGroup]="expenseForm" class="container">
 
-    <div class="row bg-dark justify-content-center pt-1" >
-      <div class="col-4  offset-3">
-        <mat-form-field class="m-0" style="max-width: 100px;">
-          <input  style="color: white;" matInput type="number" placeholder="Income" class="text-right" formControlName="income" (input)=calculateTotalExpenses()>
-          <span  style="color: white;" matPrefix>$&nbsp;</span>
-          <span  style="color: white;" matSuffix>.00</span>
-        </mat-form-field>
-      </div>
+  <div class="row bg-dark justify-content-center">
+    <div class="col-4  offset-3">
+      <mat-form-field class="m-0" style="max-width: 100px;">
+        <input style="color: white;" matInput type="number" placeholder="Income" class="text-right"
+          formControlName="income" (input)=calculateTotalExpenses()>
+        <span style="color: white;" matPrefix>$&nbsp;</span>
+        <span style="color: white;" matSuffix>.00</span>
+      </mat-form-field>
     </div>
+  </div>
 
-    <div formArrayName="expenses" class="row p-0" style="background-color: gainsboro;" #scrollable>
-      <div class="row justify-content-center m-0" style="width: 100%;"
-        *ngFor="let ingredientCtrl of expenseForm.get('expenses').controls; let i = index" [formGroupName]="i" [ngClass] ="{odd: i%2 === 0}" >
+  <div #scrollMe formArrayName="expenses" class="ngFor-container mt-4" style="overflow-y: scroll; background-color: gainsboro;"
+    [scrollTop]="scrollMe.scrollHeight">
+    
+    <div class="row" style="margin: auto;"
+      *ngFor="let expenseCtrl of expenseForm.get('expenses').controls; let i = index" [formGroupName]="i"
+      [ngClass]="{odd: i%2 === 0}">
 
-        <mat-form-field class="col-6" style="width: 100%;">
-          <input type="text" matInput formControlName="expenseName" [matAutocomplete]="autoGroup">
+      <div class="col-6 pl-3 pr-1">
+        <mat-form-field  style="width: 100%; max-width: 300px;">
+          <input type="text" matInput formControlName="expenseName" [placeholder]="Hello" [matAutocomplete]="autoGroup">
           <mat-autocomplete #autoGroup="matAutocomplete">
             <mat-optgroup *ngFor="let group of stateGroupOptions | async" [label]="group.letter">
               <mat-option *ngFor="let name of group.names" [value]="name" class="mat-group">
@@ -26,21 +30,21 @@
             </mat-optgroup>
           </mat-autocomplete>
         </mat-form-field>
-
-        <div class="col-4 p-0">
-          <mat-form-field style="max-width: 100px;">
-            <input matInput type="number" class="text-right" formControlName="amount" (blur)="onAmountLeave(i)"
-              (keyup.enter)="onAmountPressEnter(i)">
-            <span matPrefix>$&nbsp;</span>
-            <span matSuffix>.00</span>
-          </mat-form-field>
-        </div>
-
-        <div class="col align-self-center">
-          <button type="button" class="btn btn-danger btn-sm" (click)="onDeleteExpense(i)">X</button>
-        </div>
-
       </div>
+
+      <div class="col-4 pl-1 pr-1">
+        <mat-form-field style="width: 100%; max-width: 100px;">
+          <input matInput type="number" class="text-right" formControlName="amount" (blur)="onAmountLeave(i)" placeholder="Amount"
+            (keyup.enter)="onAmountPressEnter(i)">
+          <span matPrefix>$&nbsp;</span>
+          <span matSuffix>.00</span>
+        </mat-form-field>
+      </div>
+
+      <div class="col-2  align-self-center">
+        <button type="button" class="btn btn-danger btn-sm" (click)="onDeleteExpense(i)">X</button>
+      </div>
+
     </div>
   </div>
 
@@ -49,7 +53,7 @@
 <nav class="navbar fixed-bottom navbar-light bg-dark">
 
   <div class="row w-100">
-    <div class="col-6">
+    <div class="col-5">
       <button type="button" class="btn btn-danger btn-lg add-button" [disabled]="!expenseForm.valid"
         (click)="onAddExpense()">+</button>
     </div>
@@ -58,11 +62,10 @@
       <p class="text-light  m-0">Expended:</p>
       <p class="text-light  m-0">Saved:</p>
     </div>
-    <div class="col-3 text-left">
+    <div class="col-4 text-left">
       <p class="text-light m-0"> {{totalExpended}} $</p>
       <p class="text-light  m-0">{{totalSave}} $</p>
     </div>
   </div>
-
 
 </nav>
