--- a/src/app/my-nav/my-nav.component.scss
+++ b/src/app/my-nav/my-nav.component.scss
@@ -7,12 +7,13 @@
 }
 
 .sidenav .mat-toolbar {
-  background: inherit;
+  // background: inherit;
+  background-color: #a5303b !important
 }
 
 .mat-toolbar.mat-primary {
   position: sticky;
   top: 0;
   z-index: 1;
-  background-color: gray!important;
+  background-color: #a5303b !important
 }
