--- a/src/app/my-nav/my-nav.component.scss
+++ b/src/app/my-nav/my-nav.component.scss
@@ -1,6 +1,6 @@
-// .sidenav-container {
-//   height: 100%;
-// }
+.sidenav-container {
+  height: 100%;
+}
 
 .sidenav {
   width: 200px;
@@ -17,3 +17,23 @@
   z-index: 1;
   background-color: #a5303b !important
 }
+
+.spacer{
+  flex: 1 1 auto;
+}
+
+.mat-toolbar a {
+  display: inline-block;
+  margin: 0 10px;
+  color: white;
+  text-decoration: none;
+}
+
+.hidden{
+  display: none;
+}
+// @media (min-width: 600px){
+//   .sidenav {
+//     display: none;
+//   }
+// }
