--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,6 +22,10 @@
   @include scrollbars(.5em, #6f4045 );
 /* You can add global styles to this file, and also import other style files */
 // html, body { height: 100%; }
+body, html{
+    height: 100%;
+}
+
 body { 
     margin: 0;
     margin-bottom: 64px; // size of the footer height
