--- a/src/app/expense/expense.component.html
+++ b/src/app/expense/expense.component.html
@@ -21,7 +21,7 @@
     >
       <div class="col-6 pl-3 pr-1 text-right">
         <mat-form-field  style="width: 100%; max-width: 300px;">
-          <input type="text" matInput formControlName="expenseName"            
+          <input type="text" matInput formControlName="type"            
           [placeholder] = "i===0 ? 'Expense' : ''" 
           [matAutocomplete]="autoGroup">
           <mat-autocomplete #autoGroup="matAutocomplete">
