Auhentication google and UserPassword

--- a/src/app/auth/signin/signin.component.html
+++ b/src/app/auth/signin/signin.component.html
@@ -16,5 +16,5 @@
   
       </form>
     </mat-card-content>
-    <!-- <input type="button" (click) ="onGoogleLogin()" value=""> -->
+    <input type="button" (click) ="onGoogleLogin()" value="Google">
   </mat-card>
