--- a/src/app/my-nav/my-nav.component.html
+++ b/src/app/my-nav/my-nav.component.html
@@ -4,12 +4,14 @@
     [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <ng-template [ngIf]='!authService.isAuthenticated()'>
+      <!-- <ng-template [ngIf]='!authService.isAuthenticated()'> -->
+        <ng-template [ngIf]='!(authService.user | async)'>
         <a mat-list-item routerLink="/signup" (click)="drawer.toggle()">Sign Up</a>
         <a mat-list-item routerLink="/signin" (click)="drawer.toggle()">Sign In</a>
       </ng-template>
 
-      <ng-template [ngIf]='authService.isAuthenticated()'>
+      <!-- <ng-template [ngIf]='authService.isAuthenticated()'> -->
+        <ng-template [ngIf]='authService.user | async'>
           <a mat-list-item routerLink="/" (click)='onLogout(); drawer.toggle()'>Log Out</a>
       </ng-template>
 
@@ -24,12 +26,16 @@
       </button>
       <a routerLink="/expense">Expenses</a>
       <span class="spacer"></span>
-      <a routerLink="/expense">{{authService.getUserEmail()}}</a>
-      <ng-template [ngIf]='!authService.isAuthenticated()'>
+      <!-- <a routerLink="/expense">{{authService.getUserEmail()}}</a> -->
+      <a *ngIf='authService.user | async as user'>{{user.email}}</a>
+
+      <!-- <ng-template [ngIf]='!authService.isAuthenticated()'> -->
+        <ng-template [ngIf]='!(authService.user | async)'>
         <a routerLink="/signup" *ngIf="!(isHandset$ | async)">Sign Up</a>
         <a routerLink="/signin" *ngIf="!(isHandset$ | async)">Sign In</a>
       </ng-template>
-      <a routerLink="/" *ngIf="!(isHandset$ | async) && authService.isAuthenticated()" (click)='onLogout(); drawer.toggle()'>Log Out</a>
+      <!-- <a routerLink="/" *ngIf="!(isHandset$ | async) && authService.isAuthenticated()" (click)='onLogout(); drawer.toggle()'>Log Out</a> -->
+      <a routerLink="/" *ngIf="!(isHandset$ | async) && (authService.user | async)" (click)='onLogout(); drawer.toggle()'>Log Out</a>
     </mat-toolbar>
     <ng-content></ng-content>
   </mat-sidenav-content>
