--- a/src/app/auth/signin/signin.component.html
+++ b/src/app/auth/signin/signin.component.html
@@ -1,20 +1,25 @@
-<mat-card class="container text-center mt-5">
-    <mat-card-content class="row align-items-center">
-      <form class="my-form" (ngSubmit)="onSignIn(f)" #f="ngForm">
-  
-        <mat-form-field class="mr-1" style="max-width: 150px;">
-          <mat-label>Email</mat-label>
-          <input matInput id="email" name="email" type="email" ngModel>
-        </mat-form-field>
-  
-        <mat-form-field class="mr-1" style="max-width: 150px;">
-          <mat-label>Password</mat-label>
-          <input matInput id="password" name="password" type="password" ngModel >
-        </mat-form-field>
-  
-        <button mat-raised-button type="submit" color="primary">Sign In</button>
-  
-      </form>
-    </mat-card-content>
-    <input type="button" (click) ="onGoogleLogin()" value="Google">
+<form class="my-form" (ngSubmit)="onSignIn(f)" #f="ngForm" class="example-form card-register card-style">
+
+  <p class="card-description">LogIn</p>
+  <hr>
+
+  <mat-card class="example-card ">
+    <mat-form-field class="example-full-width">
+      <mat-label>Email</mat-label>
+      <input matInput id="email" name="email" type="email" ngModel>
+    </mat-form-field>
+
+    <mat-form-field class="example-full-width">
+      <mat-label>Password</mat-label>
+      <input matInput id="password" name="password" type="password" ngModel maxlength="25">
+    </mat-form-field>
+
+    <br>
+    <button mat-raised-button type="submit" color="primary">Sign In</button>
+    <hr class="button-divider">
+    <button mat-raised-button class="google-button" type="button" (click)="onGoogleLogin()" value="Google">
+        <mat-icon>Google</mat-icon>
+        Login with Google
+    </button>
   </mat-card>
+</form>
