--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,12 @@
+:root {
+    --main-bg-color: #880e4f;
+    --main-bg-color-light: #bc477b;
+    --main-bg-color-dark: #560027;
+    --secondary-bg-color:white ;
+    --main-txt-color: white; 
+    --secondary-txt-color: black; 
+  }
+
 @mixin scrollbars($size, $foreground-color, $background-color: mix($foreground-color, white, 50%)) {
     ::-webkit-scrollbar {
         width:  $size;
@@ -36,3 +45,44 @@ body {
     background-color: #6f4045 !important
 }
 
+
+
+.card-style,.two-form{
+    margin-top: 5%;;
+    padding: 20px;
+    position:relative;
+    left:50%;
+    transform: translate(-50%, 0);
+    max-width: 340px;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.5);
+    background-color: var( --main-bg-color );
+    text-align: center;
+  }
+
+  .example-full-width {
+    width: 100%;
+  }
+
+  .mat-button-custom.active:hover {
+    color: var(--secondary-txt-color);
+    background: var(--main-bg-color-dark);
+  }
+
+  hr {
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+    background-color: var( --main-txt-color ) !important;
+  }
+
+  .mat-icon {
+    color: var(--main-txt-color);
+    cursor:pointer;
+    height: 25px !important;
+    margin-top: -10px;
+  }
+
+
+  button.mat-raised-button, input.mat-raised-button{
+    color: var(--main-txt-color);
+    background: var(--main-bg-color-light) !important;
+  }
