--- a/src/app/auth/signin/signin.component.scss
+++ b/src/app/auth/signin/signin.component.scss
@@ -2,6 +2,15 @@
    background-color:  rgb(225, 63, 42) !important;
 }
 
+.facebook-button {
+    background-color:  #3b5998 !important;
+}
+
+.icon-facebook {
+    margin-top: -5px;
+    margin-right: 5px;
+}
+
 .button-divider {
     width: 120px;
     margin: 12px auto 12px auto;
