--- a/src/app/auth/signin/signin.component.scss
+++ b/src/app/auth/signin/signin.component.scss
@@ -10,6 +10,9 @@
     margin-top: -5px;
     margin-right: 5px;
 }
+.icon-google {
+    height: 33px !important;
+}
 
 .button-divider {
     width: 120px;
