--- a/src/styles.scss
+++ b/src/styles.scss
@@ -78,7 +78,7 @@ body {
   .mat-icon {
     color: var(--main-txt-color);
     cursor:pointer;
-    margin-top: -10px;
+    margin-top: auto;
   }
 
 
