--- a/src/app/my-nav/my-nav.component.scss
+++ b/src/app/my-nav/my-nav.component.scss
@@ -11,6 +11,11 @@
   background-color: #a5303b !important
 }
 
+.user-email-style{
+    font-size: 12px !important;
+    margin: 0px  !important;;
+}
+
 .mat-toolbar.mat-primary {
   position: sticky;
   top: 0;
