--- a/src/app/auth/signin/signin.component.html
+++ b/src/app/auth/signin/signin.component.html
@@ -18,22 +18,22 @@
     <br>
 
     <button mat-raised-button type="submit" color="primary">
-      <span matPrefix  style="margin-right:100px;">Sign In</span>
+      <span matPrefix style="margin-right:100px;">Sign In</span>
       <mat-icon>mail_outline</mat-icon>
     </button>
 
     <hr class="button-divider">
+
     <button mat-raised-button class="google-button" type="button" (click)="onGoogleLogin()" value="Google"
       style="text-align: left;">
-      <span matPrefix  style="margin-right: 35px;">Login with Google</span>
-      <mat-icon class="icon-google">Google</mat-icon>
-      
+      <span matPrefix style="margin-right: 35px;">Login with Google</span>
+      <mat-icon aria-hidden="false" class="icon-google">G</mat-icon>
     </button>
 
     <button mat-raised-button class="facebook-button mt-2" type="button" (click)="onFacebookLogin()" value="Facebook"
       style="text-align: left;">
       <span matPrefix class="mr-3">Login with Facebook</span>
-      <mat-icon aria-hidden="false" class="icon-facebook" matSuffix>thumb_up_alt</mat-icon>      
+      <mat-icon aria-hidden="false" class="icon-facebook" matSuffix>thumb_up_alt</mat-icon>
     </button>
 
   </mat-card>
