--- a/src/app/auth/signin/signin.component.html
+++ b/src/app/auth/signin/signin.component.html
@@ -7,12 +7,13 @@
     <mat-form-field class="example-full-width">
       <mat-label>Email</mat-label>
       <input matInput id="email" name="email" type="email" ngModel>
+      <mat-icon matSuffix>mail_outline</mat-icon>
     </mat-form-field>
 
     <mat-form-field class="example-full-width">
       <mat-label>Password</mat-label>
       <input matInput id="password" name="password" type="password" ngModel maxlength="25">
-      <mat-icon matSuffix>fingerprint</mat-icon>
+      <mat-icon matSuffix>lock_open</mat-icon>
     </mat-form-field>
 
     <br>
