--- a/src/app/my-nav/my-nav.component.scss
+++ b/src/app/my-nav/my-nav.component.scss
@@ -20,7 +20,8 @@
   position: sticky;
   top: 0;
   z-index: 1;
-  background-color: #a5303b !important
+  background-color: #a5303b !important;
+  font-size: 14px;
 }
 
 .spacer{
