--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,19 +1,22 @@
-<mat-card class="container text-center mt-5">
-  <mat-card-content class="row align-items-center">
-    <form class="my-form" (ngSubmit)="onSignUp(f)" #f="ngForm">
+<form class="example-form card-register card-style" (ngSubmit)="onSignUp(f)" #f="ngForm">
 
-      <mat-form-field class="mr-1" style="max-width: 150px;">
-        <mat-label>Email</mat-label>
-        <input matInput id="email" name="email" type="email" ngModel>
+  <p class="card-description">Sign Up</p>
+  <hr>
+  <mat-card class="example-card ">
+
+    <mat-form-field class="example-full-width">
+      <mat-label>Email</mat-label>
+      <input matInput id="email" name="email" type="email" ngModel>
+      <mat-icon matSuffix>mail</mat-icon>
       </mat-form-field>
 
-      <mat-form-field class="mr-1" style="max-width: 150px;">
+      <mat-form-field class="example-full-width">
         <mat-label>Password</mat-label>
-        <input matInput id="password" name="password" type="password" ngModel >
+        <input matInput id="password" name="password" type="password" ngModel>
+        <mat-icon matSuffix>lock</mat-icon>
       </mat-form-field>
 
       <button mat-raised-button type="submit" color="primary">Sign Up</button>
 
-    </form>
-  </mat-card-content>
-</mat-card>
+  </mat-card>
+</form>
