--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,7 +37,7 @@ body, html{
 
 body { 
     margin: 0;
-    margin-bottom: 64px; // size of the footer height
+    // margin-bottom: 64px; // size of the footer height
     font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
