--- a/src/app/expense/expense.component.html
+++ b/src/app/expense/expense.component.html
@@ -1,4 +1,5 @@
 <form [formGroup]="expenseForm" class="container">
+<!-- <form [formGroup]="getExpenseForm()" class="container"> -->
 
   <div class="row bg-dark justify-content-center pt-2">
     
@@ -13,15 +14,18 @@
     </div>
   </div>
 
-<!-- 
+  <!-- 
   <div #scrollMe formArrayName="expenses" class="ngFor-container mt-4"
     style="overflow-y: scroll; background-color: gainsboro;" [scrollTop]="scrollMe.scrollHeight"> -->
 
     <div  #scrollMe formArrayName="expenses" class="ngFor-container mt-4" style="overflow-y: scroll; background-color: gainsboro;">
 
-    <div class="row" style="margin: auto;"
+    <!-- <div class="row" style="margin: auto;"
       *ngFor="let expenseCtrl of expenseForm.get('expenses').controls; let i = index" [formGroupName]="i"
-      [ngClass]="{odd: i%2 === 0, padding: i ===0}">
+      [ngClass]="{odd: i%2 === 0, padding: i ===0}"> -->
+      <div class="row" style="margin: auto;" *ngFor="let expenseCtrl of getExpenseForm().controls; let i = index"
+        [formGroupName]="i" [ngClass]="{odd: i%2 === 0, padding: i ===0}">
+      
       <div class="col-6 pl-3 pr-1 text-right">
         <mat-form-field style="width: 100%; max-width: 300px;">
           <input type="text" matInput formControlName="type" [placeholder]="i===0 ? 'Expense' : ''"
@@ -57,8 +61,12 @@
 <nav class="navbar fixed-bottom navbar-light bg-dark">
 
   <div class="row w-100">
-    <div class="col-5  text-center">
+    <!-- <div class="col-5  text-center">
       <button type="button" class="btn btn-danger btn-lg add-button" [disabled]="!expenseForm.valid"
+        (click)="onAddExpense()">+</button>
+    </div> -->
+    <div class="col-5  text-center">
+      <button type="button" class="btn btn-danger btn-lg add-button" [disabled]="!getExpenseForm().valid"
         (click)="onAddExpense()">+</button>
     </div>
 
