Forgot Password and email validation
Working on Forgot Password and email validation

--- a/src/app/auth/signin/signin.component.scss
+++ b/src/app/auth/signin/signin.component.scss
@@ -18,3 +18,14 @@
     width: 120px;
     margin: 12px auto 12px auto;
 }
+
+.forgot-password {
+    color: var( --danger-color);
+    text-decoration: underline;
+    width: 100%;
+    // text-align: left;
+    // padding: 0px;
+}
+
+// .forgot-password:hover {
+// }
