--- a/src/app/auth/signin/signin.component.html
+++ b/src/app/auth/signin/signin.component.html
@@ -16,6 +16,8 @@
       <mat-icon matSuffix>lock_open</mat-icon>
     </mat-form-field>
 
+    <button class="forgot-password" mat-button routerLink="/forgotpass" color="primary">Forgot your password?</button>
+    
     <br>
 
     <button mat-raised-button type="submit" color="primary">
