--- a/src/app/expense/expense.component.html
+++ b/src/app/expense/expense.component.html
@@ -1,21 +1,21 @@
 <form [formGroup]="expenseForm" class="container">
 
-  <div class="row justify-content-center pt-2 bg-dark">   
+  <div class="row justify-content-center pt-2 bg-dark">
     <div class="col-6">
       <mat-form-field class="m-0" style="max-width: 100px;">
-        <input matInput type="number" placeholder="Income" class="income text-right"
-          formControlName="income" (input)=calculateTotalExpenses()>
+        <input matInput type="number" placeholder="Income" class="income text-right" formControlName="income"
+          (input)=calculateTotalExpenses()>
         <span matPrefix>$&nbsp;</span>
         <span matSuffix>.00</span>
       </mat-form-field>
     </div>
   </div>
 
-    <div  #scrollMe formArrayName="expenses" class="ngFor-container mt-4" style="overflow-y: scroll;">
+  <div #scrollMe formArrayName="expenses" class="ngFor-container mt-4" style="overflow-y: scroll;">
 
-      <div class="row" style="margin: auto;" *ngFor="let expenseCtrl of getExpenseForm().controls; let i = index"
-        [formGroupName]="i" [ngClass]="{odd: i%2 === 0, padding: i ===0}">
-      
+    <div class="row" style="margin: auto;" *ngFor="let expenseCtrl of getExpenseForm().controls; let i = index"
+      [formGroupName]="i" [ngClass]="{odd: i%2 === 0, padding: i ===0}">
+
       <div class="col-6 pl-3 pr-1 text-right">
         <mat-form-field style="width: 100%; max-width: 300px;">
           <input type="text" matInput formControlName="type" [placeholder]="i===0 ? 'Expense' : ''"
@@ -40,7 +40,9 @@
       </div>
 
       <div class="col-2  align-self-center text-right">
-        <button type="button" class="btn btn-red btn-delete btn-sm" (click)="onDeleteExpense(i)">-</button>
+        <a (click)="onDeleteExpense(i)">
+          <mat-icon>remove_circle_outline</mat-icon>
+        </a>
       </div>
 
     </div>
@@ -56,8 +58,10 @@
         (click)="onAddExpense()">+</button>
     </div> -->
     <div class="col-5  text-center">
-      <button type="button" class="btn btn-red btn-lg add-button" [disabled]="!getExpenseForm().valid"
-        (click)="onAddExpense()">+</button>
+      <button type="button" class="btn btn-add" [disabled]="!getExpenseForm().valid"
+        (click)="onAddExpense()">
+        <mat-icon class="icon-plus">add_circle_outline</mat-icon>
+      </button>
     </div>
 
     <div class="col-3  text-right">
